--- a/self introduce.html
+++ b/self introduce.html
@@ -4,6 +4,7 @@
   <title>Document</title>
   <style>
     #name{color: orange;}
+    #egi{background-color: cadetblue;}
   </style>
 </head>
 <body>
@@ -12,7 +13,7 @@
   <h3>네이버 블로그는 <a href="https://blog.naver.com/12k3k21" target="_blank"">김학치</a> 입니다.</h3>
   
   <hr>
-  <P><b>Let me introduce my self</b><br><br>
+  <P id = "egi"><b>Let me introduce my self</b><br><br>
   Hello. My name is &lt;Jaehyun Kim&gt;.<br><br>
   I'm in doown university.<br><br>
   I'm major in Mechatronics.<br><br>
